<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity"
    android:paddingLeft="40dp"
    android:paddingRight="40dp" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:text="@string/importar_datos_mayus"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvStep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lvFiles"
        android:layout_below="@+id/tvTitle"
        android:layout_marginBottom="20dp"
        android:text="@string/importacion_seleccion_archivo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/lvFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvStep2"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_alignRight="@+id/radioGroup1"
        android:layout_below="@+id/tvStep1"
        android:layout_marginBottom="40dp"
        android:background="@color/light_gray" >
    </ListView>

    <TextView
        android:id="@+id/tvStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup1"
        android:layout_alignLeft="@+id/lvFiles"
        android:layout_marginBottom="20dp"
        android:text="@string/importacion_seleccion_tipo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@color/light_gray"
        android:padding="20dp" >

        <RadioButton
            android:id="@+id/rbActualiza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:checked="true"
            android:text="@string/actualiza_registros" />

        <RadioButton
            android:id="@+id/rbElimina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elimina_registros" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="5dp"
        android:text="@string/archivo_no_cargado"
        android:textColor="@color/dark_red"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnImportar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvState"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/importar_mayus"
        android:textSize="@dimen/main_buttons_text_size" />

</RelativeLayout>